--- a/arch/arm/dts/rk3308-rock-s0-u-boot.dtsi
+++ b/arch/arm/dts/rk3308-rock-s0-u-boot.dtsi
@@ -7,6 +7,14 @@
 	bootph-some-ram;
 };
 
+&gpio4 {
+	bootph-pre-ram;
+};
+
+&sdmmc_2030 {
+	bootph-pre-ram;
+};
+
 &uart0 {
 	bootph-all;
 	clock-frequency = <24000000>;
@@ -14,6 +22,10 @@
 
 &uart0_xfer {
 	bootph-pre-sram;
+	bootph-pre-ram;
+};
+
+&vcc_sd {
 	bootph-pre-ram;
 };
 
